--- a/templates/dance_styles.html
+++ b/templates/dance_styles.html
@@ -10,6 +10,21 @@
 {% block content %}
 
 <main class="whole-page">
+
+<nav>
+        <section class="class" nav-container>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                              
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/">Home</a>
+                <a class="dropdown-item" href="/dance_schools">Schools</a>
+                <a class="dropdown-item" href="/dance_teachers">Teachers</a>
+                </div>
+                              
+        </section>
+</nav>
         <br>
         <br>
         <br>
