--- a/templates/dance_teacher.html
+++ b/templates/dance_teacher.html
@@ -11,8 +11,20 @@
 {% block content %}
 
 <main>
-  <h3>{{ teacher.teacher_name }}</h3>
-  <br>
+    <nav>
+        <section class="class" nav-container>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+      
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/">Home</a>
+            <a class="dropdown-item" href="/dance_styles">Dance Styles</a>
+            <a class="dropdown-item" href="/dance_teachers">Teachers</a>
+          </div>
+      
+        </section>
+      </nav>
   <div class="container">
 
     <div class="row">
@@ -22,34 +34,38 @@
 
 
       <div class="col-8">
-
+        <h3>{{ teacher.teacher_name }}</h3>
+        <br>
         <h5><img id="teacher_photo" src="/static/images/teachers/{{ teacher.photo }}" alt="photo"> </h5>
-        <p> {{ teacher.bio }}</p>
+        <br>
+        <br>
+        <div class="scroll-down">
+          <p class="tab"> {{ teacher.bio }}</p>
+        </div>
         </br>
         <h5 class="classes_teaches"> Classes {{ teacher.teacher_name }} teachers:</h5>
         </br>
-        <div>
+        <div class="class-schedule">
           {% for class in dance_classes %}
-          <h5>class: {{ class.name }}</h5>
-          <h5>schedule: {{ class.schedule }}</h5>
-          <h5> at: <a href="/dance_school/{{ class.school_id }}">{{ class.school.name }}</a></h5>
+          <h6><span id="class-name">class: </span>{{ class.name }}</h6>
+          <h6><span id="schedule">schedule: </span>{{ class.schedule }}</h6>
+          <h6><span id="school"> at: </span><a id="website" href="/dance_school/{{ class.school_id }}">{{ class.school.name }}</a></h6>
           </br>
           {% endfor %}
           <div>
 
 
-
-            {% if teacher.ratings %}
-            <h5>All ratings {{ teacher.teacher_name }} received:</h5>
+            <!-- {% if teacher.ratings %} -->
+            <h6><span id="all-ratings">All ratings {{ teacher.teacher_name }}  </span><span id="received">received: </span></h6>
             <ul>
               {% for rating in teacher.ratings %}
               <li>
-                <!-- <a href="/users/{{ rating.user_id }}">{{ rating.user_id }}</a> -->
+              <!-- <a href="/users/{{ rating.user_id }}">{{ rating.user_id }}</a> -->
                 {{ rating.score }}
               </li>
               {% endfor %}
             </ul>
-            {% endif %}
+            <!-- {% endif %} -->
 
 
             {% if "user_id" in session %}
@@ -80,34 +96,8 @@
       </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 </main>
 
 
 
-
-
-
-
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
-
-<script src="static/js/homepage.js" charset="utf8"></script>
 {% endblock %}
