--- a/templates/user.html
+++ b/templates/user.html
@@ -1,26 +1,67 @@
 {% extends 'base.html' %}
 {% block title %}welcome{% endblock %}
 
+{% block head %}
+{{ super() }}
+
+<link rel="stylesheet" type="text/css" href="/static/css/user.css">
+
+{% endblock %}
+
 {% block content %}
 
-<h5>Welcome, {{ user.name }}!</h5>
-<br>
-<h6>email: {{ user.email }}</h6>
-<h6>birthday: {{ user.birth_date.strftime('%b %d %Y') }}</h6>
-<br>
-<h4>Ratings</h4>
+<div class="row">
+    <div class="col-3">
+    </div>
 
-<ul>
-    {% for rating in user.ratings %}
-    <li>
-        <a href="/dance_teachers/{{ rating.teacher_id }}">{{ rating.teacher.teacher_name }}</a>
-        was rated {{ rating.score }}
-    </li>
-    {% endfor %}
-</ul>
+    <div class="col-6">
+        <div class="row" id="first-row">
+            <div class="col-12">
+                <h5>Welcome, {{ user.name }}!</h5>
+            </div>
+        </div>
 
 
+        <div class="row">
 
+            <div id="second-row" class="col">
+                <h6>email: {{ user.email }}</h6>
+                <h6>birthday: {{ user.birth_date.strftime('%b %d %Y') }}</h6>
+                <br>
+
+                {% if user.ratings %}
+                <h6>Teachers rated by you:</h6>
+
+                <ul>
+                    {% for rating in user.ratings %}
+                    <li>
+                        <a href="/dance_teachers/{{ rating.teacher_id }}"> <span id="teacher-rated">{{ rating.teacher.teacher_name }}</span></a>
+                     {{ rating.score }}
+                    </li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                <br>
+                <br>
+                <br>
+                <span class="would-uou-like">Would you like to check
+                <br>dance <a class="dance-class" href="dance_styles">classes,</a>
+                <br>
+                <a class="dance-schools" href="/dance_schools">schools,</a>
+                <br>
+                <a class="dance-teachers" href="/dance_teachers">or teachers?</a>
+            </span>
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+    <div class="col-3">
+    </div>
+</div>
 
 
 
